apps/sample-app/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-app-dev
                port:
                  number: 80
